src/templates/docs/_guide.scss
.docs-guide {
	margin-top: 36px;
	position: relative;

	@media (min-width: $screen-md-min) {
		margin-top: 48px;
	}
}

//overwrite docs > container-hybrid
.docs .container-hybrid {
	padding-left: 0;
	padding-right: 0;
}

.docs .guide-content {

	h1, h2, h3, h4, h5, h6 {
		font-family: $font-primary;
		color: rgba($primary, 0.8);
		font-weight: 700;
		margin: 0;
		padding: 0;
		text-align: left;

		margin-bottom: calc(1rem * #{$lineHeight});
	}

	h1 {
		font-size: $font-h1;
		line-height: calc(3rem * #{$lineHeight});
	}

	h2 {
		font-size: $font-h2;
		line-height: calc(3rem * #{$lineHeight});
	}

	h3 {
		font-size: $font-h3;
		line-height: calc(2rem * #{$lineHeight});
	}

	h4 {
		font-size: $font-h4;
		line-height: calc(2rem * #{$lineHeight});
	}

	h5 {
		font-size: $font-h5;
		line-height: calc(2rem * #{$lineHeight});
	}

	h6 {
		color: rgba($primary, 0.6);
		font-weight: 600;
		font-size: $font-h6;
		line-height: calc(1rem * #{$lineHeight});
	}

	p:not([class]),
	li {
		font-family: $font-secondary;
		font-weight: 400;
		font-size: $font-p;
		line-height: calc(1rem * #{$lineHeight});
		color: rgba($primary, 0.8);
	}

	p:not([class]) {
		margin-bottom: calc(1rem * #{$lineHeight});
	}

	li {
		margin-bottom: 0;

		&:last-child {
			margin-bottom: calc(1rem * #{$lineHeight});
		}
	}

	small {
		display: inline-block;
		font-family: $font-primary;
		font-weight: 600;
		font-size: $font-small;
		line-height: calc(1rem * #{$lineHeight});
		color: rgba($primary, 0.4);
		margin-bottom: calc(1rem * #{$lineHeight});
		span {
			color: rgba($primary, 0.6);
		}
	}

	ul:not([class]),
	ol:not([class]) {
		list-style: none;
		padding: 0;
		margin-left: 2rem;
	}

	ul:not([class]) li {
		position: relative;
	}

	ul:not([class]) li:before {
		font-family: $font-primary;
		font-weight: 700;
		display: inline-block;
		content: '\2022';
		width: 2rem;
		position: absolute;
		left: -1.5rem;
	}

	ul.checklist {
		list-style: none;
		padding: 0;
		margin-left: 0;
	}

	ul.checklist li:before {
		color: $accent;
		content: "\E017";
		display: inline-block;
		font-family: "icon-16";
		font-size: 16px;
		left: 0;
		position: relative;
		top: 2px;
		width: 2rem;
	}

	ol li {
		counter-increment: list;
		position: relative;
	}

	ol li:before {
		font-family: $font-primary;
		font-weight: 700;
		color: inherit;
		display: inline-block;
		content: counter(list) ".";
		width: 2rem;
		text-align: left;
		position: absolute;
		left: -2rem;
	}
	///////////////////////////LINK///////////////////////////
	p a:not([class]),
	a:not([class]) {
		@include anim(color);
		font-family: inherit;
		font-size: inherit;
		border-bottom: 1px dashed rgba($primary, 0.4);
		color: inherit;

		&:hover,
		&:focus {
			border-color: $accent;
			color: rgba($accent, 0.6);
		}
	}
	///////////////////////////CODE///////////////////////////
	code {
		background: rgba($primary, 0.1);
		display: inline-block;
		font-family: $font-mono;
		font-size: $font-small;
		line-height: cacl(1rem * #{$lineHeight});
		padding: 0 4px;
		color: inherit;
	}
	///////////////////////////WORDs///////////////////////////
	em,
	strong {
		font-family: inherit;
		font-size: inherit;
		font-weight: 700;
		font-style: normal;
	}

	strike {
		font-family: inherit;
		font-size: inherit;
		font-weight: inherit;
		text-decoration: line-through;
	}
	///////////////////////////BLOCKQUOTE///////////////////////////
	blockquote,
	blockquote p:not([class]) {
		font-family: $font-primary;
		font-weight: 700;
		font-size: $font-h4;
		line-height: calc(2rem * #{$lineHeight});
		color: rgba($primary, 0.8);
		border: 0px;
		padding: 0;
	}

	blockquote p {
		padding: 0px;
	}

	blockquote::before {
		content: '\201C';
		color: rgba($primary, 0.4);
		display: block;
		width: 2.5rem;
		text-align: left;
	}

	blockquote::after {
		position: relative;
		content: '\201D';
		color: rgba($primary, 0.4);
		display: block;
		width: 2.5rem;
		text-align: left;
		top: 1rem;
	}

	///////////////////////////FIGURE///////////////////////////
	figure {
		width: 100%;
		text-align: center;
		padding: calc(0.5rem * #{$lineHeight}) 0;

		figcaption {
			color: rgba($primary, 0.4);
			font-family: $font-secondary;
			font-weight: 400;
			font-size: $font-small;
			line-height: calc(1rem * #{$lineHeight});
			text-align: center;
			margin-top: 0.5rem;
		}
	}

	img {
		display: block;
		width: 100%;
		position: relative;
		border-radius: 0;
		@media (min-width: 600px) {
			border-radius: 4px;
		}

		&.original-size {
			width: auto;
			max-width: 100%;
			left: 50%;
			transform: translateX(-50%);
		}
	}

	///////////////////////////RADIO///////////////////////////
	ul.radio-group {
		list-style: none;
		padding: 0;
		margin-left: 0;
	}

	ul.radio-group * {
		position: relative;
	}

	ul.radio-group *:before {
		content: "";
	}

	ul.radio-group * label {
		color: inherit;
		font-family: inherit;
		font-size: inherit;
		font-weight: inherit;
		line-height: inherit;
		cursor: pointer;
		padding-left: 2rem;
		margin: 0;
		top: 0;
	}

	ul.radio-group * input[type="radio"] {
		display: none;
	}

	ul.radio-group * input[type="radio"] + label:before {
		@include anim(all);
		color: rgba($primary, 0.8);
		content: "\E059";
		font-family: 'icon-16';
		font-size: 16px;
		position: absolute;
		left: 0;
	}

	ul.radio-group * input[type="radio"]:checked + label:before {
		content: "\E058";
		color: $accent;
	}

	ul .code-container,
	ol .code-container {
		margin-left: -2rem;
	}

	///////////////////////////ASIDE///////////////////////////
	aside {
		padding: calc(1rem * #{$lineHeight});
		background: rgba($primary, 0.05);
		border-radius: 4px;
		margin-bottom: calc(1rem * #{$lineHeight});

		> * {
			margin-top: 0;
			margin-bottom: calc(1rem * #{$lineHeight});

			&:last-child {
				margin-bottom: 0;
			}
		}

		p,
		li,
		li label {
			font-size: 0.8125rem;

			code {
				display: inline;
			}
		}

		h6 {
			font-size: 1rem;
		}

		ul.radio-group li label {
			padding-left: 1.75rem;
		}
	}

	///////////////////////////TABLE///////////////////////////
	table {
		border-collapse: collapse;
		margin-bottom: calc(1rem * #{$lineHeight});
		width: 100%;

		* {
			border-width: 0px !important;
		}
	}

	table thead tr {
		background: rgba($primary, 0.05);
	}

	table tbody tr {
		&:nth-child(odd) {
			background: rgba($primary, 0.02);
		}
		&:nth-child(even) {
			background: rgba($primary, 0.05);
		}
	}

	table tr th,
	table tr td {
		border-width: 0px;
		font-size: $font-small;
		line-height: calc(1rem * #{$lineHeight});
		padding: calc(0.5rem * #{$lineHeight}) calc(1rem * #{$lineHeight});
		vertical-align: top;
		height: calc(2rem * #{$lineHeight});
	}

	.table-container {
		left: -20px;
		margin-bottom: calc(1rem * #{$lineHeight});
		overflow-x: auto;
		position: relative;
		width: calc(100% + 40px);

		@media (min-width: $screen-sm-min) {
			width: 100%;
			left: 0px;
		}

		> table {
			width: 100%;
			margin-bottom: 0;
			min-width: 560px;
		}

		> table th {
			text-align: left;
			white-space: nowrap;
		}
	}
}

